use ‘1’ for the identity everywhere, rather than ‘id’

--- a/quillen.tex
+++ b/quillen.tex
@@ -832,7 +832,7 @@ Take $MU \to E$ to be a complex-oriented ring spectrum, which presents $E^* BU$ 
 \end{definition}
 
 \begin{definition}
-In the case of the identity orientation $MU \xrightarrow{\id} MU$, the resulting classes are called the \index{Chern class!Conner Floyd@Conner--Floyd}\textit{Conner--Floyd--Chern classes} and the associated cohomology operations are called the \textit{Landweber--Novikov operations} (without further qualification).
+In the case of the identity orientation $MU \xrightarrow{1} MU$, the resulting classes are called the \index{Chern class!Conner Floyd@Conner--Floyd}\textit{Conner--Floyd--Chern classes} and the associated cohomology operations are called the \textit{Landweber--Novikov operations} (without further qualification).
 \end{definition}
 
 \begin{remark}
@@ -846,7 +846,7 @@ where we have expanded out some of the pieces of the total symmetric Chern class
 \end{remark}
 
 \begin{definition}[{\cite[Theorem I.5.1]{AdamsBlueBook}}]
-Take the orientation to be $MU \xrightarrow{\id} MU$, so that we are considering $MU^* MU$ and the Landweber--Novikov operations arising from the Conner--Floyd--Chern classes.  These account for the \emph{stable} operations in $MU$--cohomology, analogous to the Steenrod operations for $\HFtwo$.  They satisfy the following properties:
+Take the orientation to be $MU \xrightarrow{1} MU$, so that we are considering $MU^* MU$ and the Landweber--Novikov operations arising from the Conner--Floyd--Chern classes.  These account for the \emph{stable} operations in $MU$--cohomology, analogous to the Steenrod operations for $\HFtwo$.  They satisfy the following properties:
 \begin{itemize}
 \item $s_0$ is the identity.
 \item $s_\alpha$ is natural: $s_\alpha(f^* x) = f^*(s_\alpha x)$.
