link “E/A/H_∞” to “ring” by an en-dash

--- a/finite.tex
+++ b/finite.tex
@@ -256,7 +256,7 @@ The context for $MOP$, by contrast, is reasonably simple.  \Cref{CalculationOfPi
 \end{example}
 
 \begin{remark}\label{MUstarVsMUAsModuli}
-The algebraic moduli $\context{MU} = (\Spec MU_*, \Spec MU_* MU)$ and the topological moduli $(MU, MU \sm MU)$ are quite different.  An orientation $MU \to E$ selects a coordinate on the formal group $\CP^\infty_E$, but $\CP^\infty_E$ itself exists independently of the orientation.  Hence, while $\context{MU}(E_*)$ can have many connected components corresponding to \emph{distinct formal groups} on the coefficient ring $E_*$, the groupoid $\CatOf{RingSpectra}(\sheaf D_{MU}, E)$ has only \emph{one} connected component corresponding to the formal group $\CP^\infty_E$ intrinsic to $E$.\footnote{The reader ought to compare this with the situation in explicit local class field theory, where a local number field has a preferred formal group attached to it.}\footnote{The precocious student might ask what functor $MU$ represents as an $E_\infty$ ring spectrum.  To date, this functor has not been algebraically recognized.}
+The algebraic moduli $\context{MU} = (\Spec MU_*, \Spec MU_* MU)$ and the topological moduli $(MU, MU \sm MU)$ are quite different.  An orientation $MU \to E$ selects a coordinate on the formal group $\CP^\infty_E$, but $\CP^\infty_E$ itself exists independently of the orientation.  Hence, while $\context{MU}(E_*)$ can have many connected components corresponding to \emph{distinct formal groups} on the coefficient ring $E_*$, the groupoid $\CatOf{RingSpectra}(\sheaf D_{MU}, E)$ has only \emph{one} connected component corresponding to the formal group $\CP^\infty_E$ intrinsic to $E$.\footnote{The reader ought to compare this with the situation in explicit local class field theory, where a local number field has a preferred formal group attached to it.}\footnote{The precocious student might ask what functor $MU$ represents as an $E_\infty$--ring spectrum.  To date, this functor has not been algebraically recognized.}
 \end{remark}
 
 \begin{remark}[{\cite[{pg.\ 5}]{HopkinsFromSpectraToStacks}}]\label{StackinessMeasuresNonorientability}
@@ -1179,7 +1179,7 @@ L_d X & \simeq (L_d \S) \sm X, &
 \end{align*}
 \end{lemma}
 \begin{proof}[Analogy to $j_* \vdash j^*$]
-The first formula stems from $j$ an open inclusion, which has $j^* M \simeq R \otimes M$ in the algebraic setting.  The second formula can be compared to the inclusion $j$ of the formal infinitesimal neighborhood of a closed subscheme, which has algebraic model $j^* M = \lim_j (R/I^j \otimes M)$.\footnote{In keeping with our discussion of continuous Morava $E$--theory, it is also possible to consider the object $\{\left( M_0(v^I) \sm L_d X \right)\}_I$ itself as a pro-spectrum.  This is interesting to explore: Davis and Lawson have shown that setting $X = \S$ gives an $E_\infty$ pro-spectrum, even though none of the individual objects are $E_\infty$ ring spectra themselves~\cite{DavisLawson}.}
+The first formula stems from $j$ an open inclusion, which has $j^* M \simeq R \otimes M$ in the algebraic setting.  The second formula can be compared to the inclusion $j$ of the formal infinitesimal neighborhood of a closed subscheme, which has algebraic model $j^* M = \lim_j (R/I^j \otimes M)$.\footnote{In keeping with our discussion of continuous Morava $E$--theory, it is also possible to consider the object $\{\left( M_0(v^I) \sm L_d X \right)\}_I$ itself as a pro-spectrum.  This is interesting to explore: Davis and Lawson have shown that setting $X = \S$ gives an $E_\infty$--ring pro-spectrum, even though none of the individual objects are $E_\infty$--ring spectra themselves~\cite{DavisLawson}.}
 \end{proof}
 
 \begin{lemma}\label{StableMixedKthyCoopnsVanish}
