--- a/quillen.tex
+++ b/quillen.tex
@@ -611,7 +611,7 @@ Given a spectrum $E$, its $n$--fold smash power forms a \index{equivariant spect
 (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{ur}[description]{\mu_n}.
 \end{tikzcd}
 \end{center}
-A ring spectrum $E$ equipped with a suite of factorizations $\mu_n$ satisfying compatibility laws embodying term collection (i.e., $x^a \cdot x^b = x^{a+b}$) and iterated exponentiation (i.e., $(x^a)^b = x^{ab}$) is called an \index{H infty ring spectrum@$H_\infty$ ring spectrum}\textit{$H_\infty$--ring spectrum}~\cite[Definition I.3.1]{BMMS}.  The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} E^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} E\] is called the \textit{external (total) $\Sigma_n$--power operation} applied to $f$, and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) $\Sigma_n$--power operation} applied to $f$.  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
+A ring spectrum $E$ equipped with a suite of factorizations $\mu_n$ satisfying compatibility laws embodying term collection (i.e., $x^a \cdot x^b = x^{a+b}$) and iterated exponentiation (i.e., $(x^a)^b = x^{ab}$) is called an \index{H infty ring spectrum@$H_\infty$--ring spectrum}\textit{$H_\infty$--ring spectrum}~\cite[Definition I.3.1]{BMMS}.  The composite \[P^{\Sigma_n}_{\mathrm{ext}}f\co (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{f^{\sm n}_{h\Sigma_n}} E^{\sm n}_{h\Sigma_n} \xrightarrow{\mu_n} E\] is called the \textit{external (total) $\Sigma_n$--power operation} applied to $f$, and the restriction to the diagonal subspace \[P^{\Sigma_n}f \co \Susp^\infty_+ X \sm \Susp^\infty_+ B\Sigma_n \simeq (\Susp^\infty_+ X)_{h\Sigma_n} \xrightarrow{\Delta_{h\Sigma_n}} (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \xrightarrow{P^{\Sigma_n}_{\mathrm{ext}}f} E\] is called the \textit{(internal total) $\Sigma_n$--power operation} applied to $f$.  We can consider it as a cohomology class lying in \[P^{\Sigma_n} f \in E^0(X \times B\Sigma_n).\]
 
 Cohomology classes $f \in E^{-q}(X)$ lying in degrees $q \ne 0$ require more care.  Representing such a class as a map $f\co \Susp^\infty_+ X \to \S^q \sm E$, the analogous diagram is
 \begin{center}
@@ -620,7 +620,7 @@ Cohomology classes $f \in E^{-q}(X)$ lying in degrees $q \ne 0$ require more car
 (\Susp^\infty_+ X)^{\sm n}_{h\Sigma_n} \arrow["f^{\sm n}_{h\Sigma_n}"]{r} & (\S^q \sm E)^{\sm n}_{h\Sigma_n} \arrow[equal]{r} & \S^{q\rho}_{h\Sigma_n} \sm E^{\sm n}_{h\Sigma_n} \arrow[densely dotted]{u}[description]{\mu_{n,q}},
 \end{tikzcd}
 \end{center}
-where $\S^\rho$ is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of $\Sigma_n$.  Such a system of factorizations is called an $H_\infty^1$--ring structure on $E$---but in practice these are very uncommon (and in fact can only appear on $H\F_2$--algebras~\cite[Section VII.6.1]{BMMS}), and instead a subsystem of factorizations for every $q \equiv 0 \pmod d$ is called an $H_\infty^d$--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of negative degree (or at least those which are divisible by $d$).  We will mostly concern ourselves with the theory of $H_\infty$ ring spectra, but we will eventually work with an $H_\infty^2$ ring spectrum in the intended application.
+where $\S^\rho$ is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of $\Sigma_n$.  Such a system of factorizations is called an $H_\infty^1$--ring structure on $E$---but in practice these are very uncommon (and in fact can only appear on $H\F_2$--algebras~\cite[Section VII.6.1]{BMMS}), and instead a subsystem of factorizations for every $q \equiv 0 \pmod d$ is called an $H_\infty^d$--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of negative degree (or at least those which are divisible by $d$).  We will mostly concern ourselves with the theory of $H_\infty$--ring spectra, but we will eventually work with an $H_\infty^2$--ring spectrum in the intended application.
 
 \begin{remark}[{\cite[Definition IV.7.1]{BMMS}}]\label{RestrictingSteenrodOpToBasepoint}
 The optional adjective ``total'' is a reference to the following variant of this construction.  By choosing a class in $E_* B\Sigma_n$, thought of as a functional on $E^* B\Sigma_n$, the \index{Kronecker pairing}Kronecker pairing of the total power operation with this fixed class gives rise to a truly internal cohomology operation on $E^* X$ as in the following composite:
@@ -762,7 +762,7 @@ Consider the $C_n$--equivariant cofiber sequence \[S(\C^m)_+ \to S^0 \to S^{\C^m
 This last formula puts us in a position to calculate.  The Thom isomorphism for $MU$ gives an identification $MU \sm S^{\C} \simeq \Susp^2 MU$ as $C_n$--spectra, and the map \[(MU \sm S^0)^{hC_n} \to (MU \sm S^{\C})^{hC_n}\] can be identified with multiplication by the Thom class: \[MU^{\Susp^\infty BC_n} \xrightarrow{x \cdot -} (\Susp^2 MU)^{\Susp^\infty BC_n}.\]  In all, this gives \[MU^{tC_n} \simeq \colim_{m \to \infty} \left((MU \sm S^{\C^m})^{hC_n}\right) \simeq \colim_{m \to \infty} \left((\Susp^{2m} MU)^{BC_n}\right) \simeq MU^{BC_n}[x^{-1}]. \qedhere\]
 \end{proof}
 
-To apply this machinery in our case, we need only equip $MU$ with the factorized multiplication maps appearing in the definition of an $H_\infty$ ring spectrum.  (In fact, we will note that this enriches to an  \index{H infty ring spectrum@$H_\infty$ ring spectrum!H infinity 2 on MU@$H_\infty^2$--structure on $MU$}$H_\infty^2$ ring spectrum structure in the next Lecture.)
+To apply this machinery in our case, we need only equip $MU$ with the factorized multiplication maps appearing in the definition of an $H_\infty$--ring spectrum.  (In fact, we will note that this enriches to an  \index{H infty ring spectrum@$H_\infty$--ring spectrum!H infinity 2 on MU@$H_\infty^2$--structure on $MU$}$H_\infty^2$--ring spectrum structure in the next Lecture.)
 
 \begin{definition}[{\cite[Definition VII.7.4]{Rudyak}}]
 Suppose that $\xi\co X \to BU(k)$ presents a complex vector bundle of rank $k$ on $X$.  The $n$--fold direct sum of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\oplus n}} BU(k)^{\times n} \xrightarrow{\oplus} BU(n \cdot k)\] of rank $nk$ on which the cyclic group $C_n$ acts.  By taking the (homotopy) $C_n$--quotient of the fiber, total, and base spaces, we produce a vector bundle $\xi(n)$ on $X^{\times n}_{hC_n}$ participating in the diagram
@@ -805,7 +805,7 @@ The chain model for $\HFtwo$--homology is actually also rigid enough to define p
 \end{example}
 
 \begin{remark}[{\cite[Theorems III.4.1-3, Remark III.4.4]{BMMS}}]\label{HinftyRingsModp}
-Since the failure of the power operations to be additive was a consequence of the binomial formula, it is somewhat intuitive that modulo $2$, where $(x + y)^2 \equiv x^2 + y^2$, that this operation becomes stable.  In fact, more than this is true: for instance, if an $H_\infty$ ring spectrum $E$ has $\pi_0 E = \F_p$, it must be the case that $E$ is an $\HFp$--algebra.  This fact also gives an inexplicit means to recover \Cref{MOSplitsIntoHF2s}, after noting that the same methods used to endow $MU$ with an $H_\infty$ ring spectrum structure do the same for $MO$.
+Since the failure of the power operations to be additive was a consequence of the binomial formula, it is somewhat intuitive that modulo $2$, where $(x + y)^2 \equiv x^2 + y^2$, that this operation becomes stable.  In fact, more than this is true: for instance, if an $H_\infty$--ring spectrum $E$ has $\pi_0 E = \F_p$, it must be the case that $E$ is an $\HFp$--algebra.  This fact also gives an inexplicit means to recover \Cref{MOSplitsIntoHF2s}, after noting that the same methods used to endow $MU$ with an $H_\infty$--ring spectrum structure do the same for $MO$.
 \end{remark}
 
 
@@ -857,7 +857,7 @@ Take the orientation to be $MU \xrightarrow{1} MU$, so that we are considering $
 \end{itemize}
 \end{definition}
 
-Having now set up an encompassing theory of stable operations, we now seek to give a formula for the cyclic Tate power operation in this framework.  In order to approach this, we initially set our sights on the too-lofty goal of computing the total power operation $P^{C_n}(f)$ for $f \in MU^{2q}(X)$ an $MU$--cohomology class on a finite complex $X$, without necessarily passing to the Tate construction.  Because of the definition $MU = \colim_k MU(k)$ and because $P^{C_n}$ is natural under pullback, it will suffice for us to study the effect of $P^{C_n}$ on the universal classes \[u_m\co MU(m) \to MU,\] after using the canonical $MU$--Thom isomorphism to reinterpret them as classes on a suspension spectrum.  We begin with the canonical orientation itself: \[u_1 = x \in h\CatOf{Spectra}(MU(1), MU) \cong MU^2 \CP^\infty.\]  In order to understand the effect $P^{C_n}(x)$ of the power operation on $x$, we recall a different interpretation of $x$: it is also the $1${\st} Conner--Floyd--Chern class of the \index{canonical bundle}\index{tautological bundle|see {canonical bundle}}tautological bundle $\L$ on $\CP^\infty$, i.e., \[x\co MU(1) \to MU\] is the Thomification of the block inclusion \[\L\co BU(1) \to BU.\]  The $H_\infty^2$ ring spectrum construction defining $P^{C_n}_{\mathrm{ext}}(x)$ thus fits into the following diagram:
+Having now set up an encompassing theory of stable operations, we now seek to give a formula for the cyclic Tate power operation in this framework.  In order to approach this, we initially set our sights on the too-lofty goal of computing the total power operation $P^{C_n}(f)$ for $f \in MU^{2q}(X)$ an $MU$--cohomology class on a finite complex $X$, without necessarily passing to the Tate construction.  Because of the definition $MU = \colim_k MU(k)$ and because $P^{C_n}$ is natural under pullback, it will suffice for us to study the effect of $P^{C_n}$ on the universal classes \[u_m\co MU(m) \to MU,\] after using the canonical $MU$--Thom isomorphism to reinterpret them as classes on a suspension spectrum.  We begin with the canonical orientation itself: \[u_1 = x \in h\CatOf{Spectra}(MU(1), MU) \cong MU^2 \CP^\infty.\]  In order to understand the effect $P^{C_n}(x)$ of the power operation on $x$, we recall a different interpretation of $x$: it is also the $1${\st} Conner--Floyd--Chern class of the \index{canonical bundle}\index{tautological bundle|see {canonical bundle}}tautological bundle $\L$ on $\CP^\infty$, i.e., \[x\co MU(1) \to MU\] is the Thomification of the block inclusion \[\L\co BU(1) \to BU.\]  The $H_\infty^2$--ring spectrum construction defining $P^{C_n}_{\mathrm{ext}}(x)$ thus fits into the following diagram:
 \begin{center}
 \begin{tikzcd}
 \Susp^\infty_+ BU(1) \arrow["\Delta"]{d} \arrow{r} & \Susp^\infty_+ BU(1) \sm \Susp^\infty_+ BC_n \arrow["\Delta_{hC_n}"]{d} \\
