correct equivariance discrepancy

--- a/quillen.tex
+++ b/quillen.tex
@@ -787,7 +787,7 @@ T(\xi(n)) & = T(\xi^{\oplus n}_{hC_n}) \tag{definition} \\
 \end{align*}
 \end{proof}
 
-Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{hC_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{hC_n} \xrightarrow{\mu_n} MU.\]  In fact, this enriches to an $H_\infty^2$ structure: by applying \Cref{ThomSpectrumOfAssocBundle} in reverse, the basic construction is
+Applying the Lemma to the universal case produces a factorization \[MU(k)^{\sm n} \to MU(k)^{\sm n}_{hC_n} \to MU(nk)\] of the unstable multiplication map, and hence a stable factorization \[MU^{\sm n} \to MU^{\sm n}_{hC_n} \xrightarrow{\mu_n} MU.\]  In fact, this enriches to an $H_\infty^2$ structure: by applying \Cref{ThomSpectrumOfAssocBundle} in reverse (and harmlessly trading $C_n$ for $\Sigma_n$), the basic construction is
 \begin{align*}
 \mu_{2,2}\co \S^2_{h\Sigma_2} \sm MU^{\sm 2}_{h\Sigma_2} & \xrightarrow{1 \sm \mu_2} \S^2_{h\Sigma_2} \sm MU \\
 & \simeq T(1_{\R}(2) \downarrow *) \sm MU \tag{\Cref{ThomSpectrumOfAssocBundle}} \\
