--- a/mo.tex
+++ b/mo.tex
@@ -500,7 +500,7 @@ Let $A$ be a Hopf $k$--algebra, let $M$ be an $A$--comodule, and let $N$ be a $k
 Given a map $f\co M \to N$ of $k$--modules, we can build the composite \[M \xrightarrow{\psi_M} M \otimes_k A \xrightarrow{f \otimes 1} N \otimes_k A.\]  Alternatively, given a map $g\co M \to N \otimes_k A$ of $A$--comodules, we build the composite \[M \xrightarrow{g} N \otimes_k A \xrightarrow{1 \otimes \eps} N \otimes_k k = N. \qedhere\]
 \end{proof}
 
-\begin{corollary}[{\cite[Lemma A1.2.2]{RavenelGreenBook}}]
+\begin{corollary}[{\cite[Lemma A1.2.2]{RavenelGreenBook}}]\label{ExtendedComodulesExist}
 The category $\CatOf{Comodules}_A$ has enough injectives.  Namely, if $M$ is an $A$--comodule and $M \to I$ is an inclusion of $k$--modules into an injective $k$--module $I$, then $M \to I \otimes_k A$ is an injective $A$--comodule under $M$. \qed
 \end{corollary}
 \begin{remark}
@@ -549,7 +549,7 @@ A map of groups $f\co G \to H$ induces a map $k^f\co k^H \to k^G$ of Hopf algebr
 
 These concerns, together with the definition of a tensor product as a coequalizer, motivate the following:
 
-\begin{definition}
+\begin{definition}\label{CotensorDefn}
 Given $A$--comodules $M$ and $N$, their \index{comodule!cotensor product}\textit{cotensor product} is the $k$-module defined by the equalizer \[M \cotensor_A N \to M \otimes_k N \xrightarrow{\psi_M \otimes 1 - 1 \otimes \psi_N} M \otimes_k A \otimes_k N.\]
 \end{definition}
 
