missing coordinate specification

--- a/finite.tex
+++ b/finite.tex
@@ -582,7 +582,7 @@ If $[p]_\phi(x) = [p]_\psi(x)$ for two $p$--typical formal group laws $+_\phi$ a
 \begin{corollary}\label{EveryPSeriesArises}
 For any sequence of coefficients $v_j \in R$ in a $\Z_{(p)}$--algebra $R$, there is a unique $p$--typical formal group law $+_\phi$ with
 \[\pushQED{\qed}
-[p]_\phi = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_d x^{p^d} +_\phi \cdots. \qedhere
+[p]_\phi(x) = px +_\phi v_1 x^p +_\phi v_2 x^{p^2} +_\phi \cdots +_\phi v_d x^{p^d} +_\phi \cdots. \qedhere
 \popQED\]
 \end{corollary}
 
