update a bunch of bibtex entries

--- a/main.bib
+++ b/main.bib
@@ -128,13 +128,20 @@ MRREVIEWER = {D. Zelinsky},
        URL = {http://dx.doi.org/10.2307/1993268},
 }
 
-@article{ABP,
-  title={The structure of the spin cobordism ring},
-  author={Anderson, Donald W and Brown, EH and Peterson, Franklin P},
-  journal={Annals of Mathematics},
-  pages={271--298},
-  year={1967},
-  publisher={JSTOR}
+@article {ABP,
+    AUTHOR = {Anderson, D. W. and Brown, Jr., E. H. and Peterson, F. P.},
+     TITLE = {The structure of the {S}pin cobordism ring},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {86},
+      YEAR = {1967},
+     PAGES = {271--298},
+      ISSN = {0003-486X},
+   MRCLASS = {57.10},
+  MRNUMBER = {0219077},
+MRREVIEWER = {P. S. Landweber},
+       DOI = {10.2307/1970690},
+       URL = {http://dx.doi.org/10.2307/1970690},
 }
 
 @article {Ando,
@@ -156,16 +163,25 @@ MRREVIEWER = {P. S. Landweber},
        URL = {http://dx.doi.org/10.1215/S0012-7094-95-07911-3},
 }
 
-@article{ABGHR,
-  title={An {$\infty$}-categorical approach to {$R$}-line bundles, {$R$}-module Thom spectra, and twisted {$R$}-homology},
-  author={Ando, Matthew and Blumberg, Andrew J and Gepner, David and Hopkins, Michael J and Rezk, Charles},
-  journal={Journal of Topology},
-  volume={7},
-  number={3},
-  pages={869--893},
-  year={2013},
-  publisher={Oxford University Press}
+@article {ABGHR,
+    AUTHOR = {Ando, Matthew and Blumberg, Andrew J. and Gepner, David and
+              Hopkins, Michael J. and Rezk, Charles},
+     TITLE = {An {$\infty$}-categorical approach to {$R$}-line bundles,
+              {$R$}-module {T}hom spectra, and twisted {$R$}-homology},
+   JOURNAL = {J. Topol.},
+  FJOURNAL = {Journal of Topology},
+    VOLUME = {7},
+      YEAR = {2014},
+    NUMBER = {3},
+     PAGES = {869--893},
+      ISSN = {1753-8416},
+   MRCLASS = {55P43 (55N20 55U40)},
+  MRNUMBER = {3252967},
+MRREVIEWER = {Tyler D. Lawson},
+       DOI = {10.1112/jtopol/jtt035},
+       URL = {http://dx.doi.org/10.1112/jtopol/jtt035},
 }
+
 
 @article {AFG,
     AUTHOR = {Ando, Matthew and French, Christopher P. and Ganter, Nora},
@@ -246,7 +262,7 @@ MRREVIEWER = {Neil P. Strickland},
 }
 
 @article{AMS,
-  title={Completions of ℤ/(p)--Tate cohomology of periodic spectra},
+  title={Completions of {$\mathbb{Z}/(p)$}--Tate cohomology of periodic spectra},
   author={Ando, Matthew and Morava, Jack and Sadofsky, Hal},
   journal={Geometry \& Topology},
   volume={2},
@@ -525,11 +541,22 @@ MRREVIEWER = {Paul G. Goerss},
   year={2009}
 }
 
-@book{BehrensLawson,
-  title={Topological automorphic forms},
-  author={Behrens, Mark and Lawson, Tyler},
-  year={2010},
-  publisher={American Mathematical Soc.}
+@article {BehrensLawson,
+    AUTHOR = {Behrens, Mark and Lawson, Tyler},
+     TITLE = {Topological automorphic forms},
+   JOURNAL = {Mem. Amer. Math. Soc.},
+  FJOURNAL = {Memoirs of the American Mathematical Society},
+    VOLUME = {204},
+      YEAR = {2010},
+    NUMBER = {958},
+     PAGES = {xxiv+141},
+      ISSN = {0065-9266},
+      ISBN = {978-0-8218-4539-4},
+   MRCLASS = {55N34 (11F23 14G35 55N22 55P43)},
+  MRNUMBER = {2640996},
+MRREVIEWER = {Paul G. Goerss},
+       DOI = {10.1090/S0065-9266-09-00573-0},
+       URL = {http://dx.doi.org/10.1090/S0065-9266-09-00573-0},
 }
 
 @article{BeilinsonAdeles,
@@ -651,14 +678,23 @@ MRREVIEWER = {M. Mimura},
 MRREVIEWER = {N. Yui},
 }
 
-@article{Browder,
-  title={The Kervaire invariant of framed manifolds and its generalization},
-  author={Browder, William},
-  journal={Annals of Mathematics},
-  pages={157--186},
-  year={1969},
-  publisher={JSTOR}
+@article {Browder,
+    AUTHOR = {Browder, William},
+     TITLE = {The {K}ervaire invariant of framed manifolds and its
+              generalization},
+   JOURNAL = {Ann. of Math. (2)},
+  FJOURNAL = {Annals of Mathematics. Second Series},
+    VOLUME = {90},
+      YEAR = {1969},
+     PAGES = {157--186},
+      ISSN = {0003-486X},
+   MRCLASS = {57.10},
+  MRNUMBER = {0251736},
+MRREVIEWER = {Edgar H. Brown, Jr.},
+       DOI = {10.2307/1970686},
+       URL = {http://dx.doi.org/10.2307/1970686},
 }
+
 
 @book {BMMS,
     AUTHOR = {Bruner, R. R. and May, J. P. and McClure, J. E. and
@@ -743,12 +779,16 @@ MRREVIEWER = {Edgar H. Brown, Jr.},
        URL = {http://dx.doi.org/10.1016/0022-4049(82)90020-2},
 }
 
-@book{ConnerFloyd,
-  title={The relation of cobordism to {$K$}-theories},
-  author={Conner, Pierre E and Floyd, Edwin Earl},
-  volume={28},
-  year={1966},
-  publisher={Springer}
+@book {ConnerFloyd,
+    AUTHOR = {Conner, P. E. and Floyd, E. E.},
+     TITLE = {The relation of cobordism to {$K$}-theories},
+    SERIES = {Lecture Notes in Mathematics, No. 28},
+ PUBLISHER = {Springer-Verlag, Berlin-New York},
+      YEAR = {1966},
+     PAGES = {v+112},
+   MRCLASS = {57.10 (55.00)},
+  MRNUMBER = {0216511},
+MRREVIEWER = {M. F. Atiyah},
 }
 
 @incollection {Davis,
@@ -844,15 +884,23 @@ MRREVIEWER = {Frederick Cohen},
        URL = {http://dx.doi.org/10.2307/1971440},
 }
 
-@article{DouglasHenriques,
-  title={Topological modular forms and conformal nets},
-  author={Douglas, Christopher L and Henriques, Andr{\'e} G},
-  journal={Mathematical foundations of quantum field theory and perturbative string theory},
-  volume={83},
-  number={341},
-  pages={7},
-  year={2011}
+@incollection {DouglasHenriques,
+    AUTHOR = {Douglas, Christopher L. and Henriques, Andr\'e G.},
+     TITLE = {Topological modular forms and conformal nets},
+ BOOKTITLE = {Mathematical foundations of quantum field theory and
+              perturbative string theory},
+    SERIES = {Proc. Sympos. Pure Math.},
+    VOLUME = {83},
+     PAGES = {341--354},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2011},
+   MRCLASS = {81T05 (18D05 19D99 55N34 81T40)},
+  MRNUMBER = {2742433},
+MRREVIEWER = {Mark J. Behrens},
+       DOI = {10.1090/pspum/083/2742433},
+       URL = {http://dx.doi.org/10.1090/pspum/083/2742433},
 }
+
 
 @preamble{
    "\def\cprime{$'$} "
@@ -1034,12 +1082,22 @@ MRREVIEWER = {Birgit Richter},
   publisher={Elsevier}
 }
 
-@article{Grojnowski,
-  title={Delocalized equivariant elliptic cohomology, inElliptic cohomology, geometry, and applications, and higher chromatic analogs},
-  author={Grojnowski, I},
-  journal={LMS Lecture Notes},
-  volume={342}
+@incollection {Grojnowski,
+    AUTHOR = {Grojnowski, I.},
+     TITLE = {Delocalised equivariant elliptic cohomology},
+ BOOKTITLE = {Elliptic cohomology},
+    SERIES = {London Math. Soc. Lecture Note Ser.},
+    VOLUME = {342},
+     PAGES = {114--121},
+ PUBLISHER = {Cambridge Univ. Press, Cambridge},
+      YEAR = {2007},
+   MRCLASS = {55N34 (20G05 55N91)},
+  MRNUMBER = {2330510},
+MRREVIEWER = {J. P. C. Greenlees},
+       DOI = {10.1017/CBO9780511721489.007},
+       URL = {http://dx.doi.org/10.1017/CBO9780511721489.007},
 }
+
 
 @book {GrothendieckCristaux,
     AUTHOR = {Grothendieck, Alexandre},
@@ -1132,17 +1190,37 @@ MRREVIEWER = {Robert Speiser},
 
 % this could be updated
 @ARTICLE{HedayatzadehGeneralCase,
-  author = {Hedayatzadeh, S. Mohammad Hadi},
-  title = {Exterior powers of {L}ubin--{T}ate groups},
-  note = {\url{http://hedayatzadeh.info/Home_files/EPLTG.pdf}, Accessed: 2015-01-09}
+    AUTHOR = {Hedayatzadeh, S. Mohammad Hadi},
+     TITLE = {Exterior powers of {L}ubin-{T}ate groups},
+   JOURNAL = {J. Th\'eor. Nombres Bordeaux},
+  FJOURNAL = {Journal de Th\'eorie des Nombres de Bordeaux},
+    VOLUME = {27},
+      YEAR = {2015},
+    NUMBER = {1},
+     PAGES = {77--148},
+      ISSN = {1246-7405},
+   MRCLASS = {14L05},
+  MRNUMBER = {3346966},
+MRREVIEWER = {Noriko Yui},
+       URL = {http://jtnb.cedram.org/item?id=JTNB_2015__27_1_77_0},
 }
 
-@book{Hida,
-  title={p-adic automorphic forms on Shimura varieties},
-  author={Hida, Haruzo},
-  year={2012},
-  publisher={Springer Science \& Business Media}
+
+@book {Hida,
+    AUTHOR = {Hida, Haruzo},
+     TITLE = {{$p$}-adic automorphic forms on {S}himura varieties},
+    SERIES = {Springer Monographs in Mathematics},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {2004},
+     PAGES = {xii+390},
+      ISBN = {0-387-20711-2},
+   MRCLASS = {11F33 (11F46 11F85 11G18)},
+  MRNUMBER = {2055355},
+MRREVIEWER = {Jacques Tilouine},
+       DOI = {10.1007/978-1-4684-9390-0},
+       URL = {http://dx.doi.org/10.1007/978-1-4684-9390-0},
 }
+
 
 @article{HHR,
   title={On the nonexistence of elements of Kervaire invariant one},
@@ -1675,7 +1753,7 @@ MRREVIEWER = {Alan Koch},
 }
 
 @article{KreckStolz,
-  title={HP 2-bundles and elliptic homology},
+  title={{$\mathbb H^2}-bundles and elliptic homology},
   author={Kreck, Matthias and Stolz, Stephan},
   journal={Acta Mathematica},
   volume={171},
@@ -1858,12 +1936,16 @@ MRREVIEWER = {Rui Miguel Saramago},
        URL = {http://dx.doi.org/10.1112/jtopol/jtr030},
 }
 
-@book{LazardCFGs,
-  title={Commutative formal groups},
-  author={Lazard, Michel P},
-  volume={443},
-  year={2006},
-  publisher={Springer}
+@book {LazardCFGs,
+    AUTHOR = {Lazard, Michel},
+     TITLE = {Commutative formal groups},
+    SERIES = {Lecture Notes in Mathematics, Vol. 443},
+ PUBLISHER = {Springer-Verlag, Berlin-New York},
+      YEAR = {1975},
+     PAGES = {ii+236},
+   MRCLASS = {14L05},
+  MRNUMBER = {0393050},
+MRREVIEWER = {Robert A. Morris},
 }
 
 @article {LazardGroupesDeLie,
@@ -2086,13 +2168,21 @@ MRREVIEWER = {Ian Hambleton},
        URL = {http://dx.doi.org/10.1090/cbms/091},
 }
 
-@book{MayClassifyingSpaces,
-  title={Classifying spaces and fibrations},
-  author={May, J Peter},
-  volume={155},
-  year={1975},
-  publisher={American Mathematical Soc.}
+@article {MayClassifyingSpaces,
+    AUTHOR = {May, J. Peter},
+     TITLE = {Classifying spaces and fibrations},
+   JOURNAL = {Mem. Amer. Math. Soc.},
+  FJOURNAL = {Memoirs of the American Mathematical Society},
+    VOLUME = {1},
+      YEAR = {1975},
+    NUMBER = {1, 155},
+     PAGES = {xiii+98},
+      ISSN = {0065-9266},
+   MRCLASS = {55F15 (57F20)},
+  MRNUMBER = {0370579},
+MRREVIEWER = {Harold Hastings},
 }
+
 
 @book {MayConciseCourse,
     AUTHOR = {May, J. P.},
@@ -2538,7 +2628,7 @@ MRREVIEWER = {P. S. Landweber},
 }
 
 @article{Pengelley,
-  title={The homotopy type of MSU},
+  title={The homotopy type of {$MSU$}},
   author={Pengelley, David J},
   journal={American Journal of Mathematics},
   volume={104},
@@ -2582,7 +2672,7 @@ MRREVIEWER = {T. tom Dieck},
 
 @article {QuillenAdamsSS,
     AUTHOR = {Quillen, Daniel},
-     TITLE = {On the formal group laws of unoriented and  complex cobordism
+     TITLE = {On the formal group laws of unoriented and complex cobordism
               theory},
    JOURNAL = {Bull. Amer. Math. Soc.},
   FJOURNAL = {Bulletin of the American Mathematical Society},
