enunciate the variance in 2.1.23

--- a/quillen.tex
+++ b/quillen.tex
@@ -228,7 +228,7 @@ It follows that $F(x +_\phi y)$ and $F(x)$ differ by a constant.  Checking at $x
 \end{proof}
 
 \begin{lemma}\label{InvDifflsAreDeterminedByConstantTerm}
-For $R$ any ring, there is an isomorphism $\omega_{\G} \cong T_0^* \G$.
+For $R$ any ring, restriction to the identity point yields an isomorphism $\omega_{\G} \cong T_0^* \G$.
 \end{lemma}
 \begin{proof}
 We set out to analyze the space of invariant differentials in terms of a coordinate $x$.  As above, a differential $\omega$ admits expression as $\omega = f(x) \dx$, and the invariance condition above becomes \[f(x) \dx = f(y +_\phi x) \operatorname{d}(y +_\phi x) = f(y +_\phi x) \frac{\partial(y +_\phi x)}{\partial x} \dx.\]  Restricting this equation to the origin by setting $x = 0$, we produce the condition \[f(0) = f(y) \cdot \left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}.\]  The partial differential is a multiplicatively invertible power series, and hence we may rewrite $f(y)$ as \[f(y) = f(0) \cdot \left(\left. \frac{\partial(y +_\phi x)}{\partial x} \right|_{x=0}\right)^{-1}.\]  This shows that the assignment $f(y) \mapsto f(0)$ is bijective, establishing the desired isomorphism.
