--- a/main.bib
+++ b/main.bib
@@ -1996,6 +1996,25 @@ MRREVIEWER = {Keith Peter Johnson},
 MRREVIEWER = {Birgit Richter},
 }
 
+@article {Lin,
+    AUTHOR = {Lin, Wen Hsiung},
+     TITLE = {On conjectures of {M}ahowald, {S}egal and {S}ullivan},
+   JOURNAL = {Math. Proc. Cambridge Philos. Soc.},
+  FJOURNAL = {Mathematical Proceedings of the Cambridge Philosophical
+              Society},
+    VOLUME = {87},
+      YEAR = {1980},
+    NUMBER = {3},
+     PAGES = {449--458},
+      ISSN = {0305-0041},
+     CODEN = {MPCPCO},
+   MRCLASS = {55Q10},
+  MRNUMBER = {556925 (81e:55020)},
+MRREVIEWER = {Donald M. Davis},
+       DOI = {10.1017/S0305004100056887},
+       URL = {http://dx.doi.org/10.1017/S0305004100056887},
+}
+
 @article {LubinTate,
     AUTHOR = {Lubin, Jonathan and Tate, John},
      TITLE = {Formal moduli for one-parameter formal {L}ie groups},
@@ -3397,6 +3416,18 @@ MRREVIEWER = {Mark Hovey},
       YEAR = {2005},
    MRCLASS = {14F20 (14A20)},
   MRNUMBER = {2223406},
+}
+
+@book {Weil,
+    AUTHOR = {Weil, Andr\'e},
+     TITLE = {Basic number theory},
+   EDITION = {Third},
+      NOTE = {Die Grundlehren der Mathematischen Wissenschaften, Band 144},
+ PUBLISHER = {Springer-Verlag, New York-Berlin},
+      YEAR = {1974},
+     PAGES = {xviii+325},
+   MRCLASS = {12-02},
+  MRNUMBER = {0427267},
 }
 
 @misc{Weinstein,
