--- a/unknowns.tex
+++ b/unknowns.tex
@@ -94,16 +94,18 @@ For $p > 3$, these bounds pass through each other and there is no satisfying val
 
 This procedure of passing to (higher-order) vector bundles, as in the Kreck--Stolz construction, is embodied by passing from a ring spectrum to its algebraic $K$--theory spectrum.  There are on-going research programs with the goal of demonstrating that the algebraic $K$--theory of a ring spectrum of ``chromatic complexity $d$'' is itself of chromatic complexity one larger, as in the transition from $kO$ to $\tmf$.  This is one instance of a family of operations that (conjecturally) modulate chromatic height; such operations that raise height are called \textit{redshifting}, and operations that lower height are called \textit{blueshifting}, in reference to the periodicity perspective of \Cref{CdEqualsDd}.
 
-As an example of a blueshifting construction, an important observation of Ando, Morava, and Sadofsky~\cite{AMS} is that the $C_p$--Tate construction on the ring spectrum $E(d)$ is a variant of $E(d-1)$.\footnote{Somewhat more specifically, it gives $E(d-1)$ with homotopy tensored up by a quite \emph{large} ring.}  In fact, Hovey, Sadofsky, and Kuhn show that something similar happens quite generally: if $R$ is an $E(d)$--local ring spectrum and $G$ is a finite $p$--group, then the Tate object $R^{tG}$ is an $E(d-1)$--local ring spectrum.  For a striking example of this phenomenon, we consider the case of the $2$--adic sphere spectrum, which is $K(\infty)$--local.  We specialize to the case $G = C_2$ in order to perform an explicit construction involving $\S^{tC_2} \simeq \RP^\infty_{-\infty}$.\todo{We need the definition of $\RP^\infty_{-\infty}$ from below up here.}  Note that the bottom cell of $\RP^n_0$ is unattached, and hence there is a natural wrong-way map \[\RP^n_0 \to \S^0.\]  Taking Spanier--Whitehead duals and applying Atiyah's calculation of the dual of $\RP^n_0$~\cite{Atiyah}, we produce a map \[\S^0 \to D \RP^{(n+1)-1}_{-(0)} = \Susp \RP^{(0)-1}_{-(n+1)} \to \Susp \RP^\infty_{-(n+1)}.\]  Taking the inverse limit gives a map \[\S^0 \to \Susp \RP^\infty_{-\infty},\] and Lin showed this map to be a $2$--adic equivalence.\footnote{More generally, Carlsson proved a generalization of this to all other groups, known as the Segal conjecture.}  From the perspective of blueshift, the qualitative form of this is not entirely unexpected: the sphere has infinite chromatic complexity, and so blueshifting it by one stage yields another spectrum of infinite chromatic complexity.  The precise form, however, is quite surprising: we produced exactly the sphere spectrum again!
+As an example of a blueshifting construction, an important observation of Ando, Morava, and Sadofsky~\cite{AMS} is that the $C_p$--Tate construction on the ring spectrum $E(d)$ is a variant of $E(d-1)$.\footnote{Somewhat more specifically, it gives $E(d-1)$ with homotopy tensored up by a quite \emph{large} ring.}  In fact, Hovey, Sadofsky, and Kuhn show that something similar happens quite generally: if $R$ is an $E(d)$--local ring spectrum and $G$ is a finite $p$--group, then the Tate object $R^{tG}$ is an $E(d-1)$--local ring spectrum.  For a striking example of this phenomenon, we consider the case of the $2$--adic sphere spectrum, which is $K(\infty)$--local.  We specialize to the case $G = C_2$ in order to perform an explicit analysis of $\S^{tC_2}$, which belongs to a stable fiber sequence \[\S^{hC_2} \to \S^{tC_2} \to \Susp \S_{hC_2}.\]  The orbit spectrum can be identified as \[\S_{hC_2} \simeq \Susp^\infty_+ EC_2 / C_2 = \Susp^\infty_+ BC_2 \simeq \Susp^\infty_+ \RP^\infty,\] and similarly we can identify the fixed point spectrum as \[\S^{hC_2} \simeq F_{C_2}(\Susp^\infty_+ EC_2, \S) \simeq D\Susp\infty_+ \RP^\infty.\]  A remarkable theorem of Atiyah~\cite{Atiyah} presents the Spanier--Whitehead dual of projective space.  First, the calculation $T(\mathcal L \downarrow \RP^n) = \RP^{n+1}$ of \Cref{RPnThomExample} extends by the formula $T(m \mathcal L \downarrow \RP^n) = \Susp^\infty_+ \RP^{n+m} / \RP^{m-1}$ to positive values of $m$, and the same formula can be used to \emph{define} complexes $\RP^n_m$ for negative values of $m$.  Then, Atiyah demonstrates the formula \[D \RP^{n-1}_m \simeq \Susp \RP^{m-1}_n.\]  In our case, we thus calculate
+\begin{center}
+\begin{tikzcd}
+\S^{hC_2} \arrow{r} \arrow[equal]{d} & \S^{tC_2} \arrow{r} \arrow[equal]{d} & \Susp \S_{hC_2} \arrow[equal]{d} \\
+\Susp \RP^{-1}_{-\infty} \arrow{r} & \Susp \RP^\infty_{-\infty} \arrow{r} & \Susp \RP^\infty.
+\end{tikzcd}
+\end{center}
+By shifting this presentation slightly, we highlight an interesting comparison map.  Note that the bottom cell of $\RP^n_0$ is unattached, and hence there is a natural wrong-way map \[\RP^n_0 \to \S^0.\]  Taking Spanier--Whitehead duals and applying Atiyah's formula, we produce a map \[\S^0 \to D \RP^{(n+1)-1}_{-(0)} = \Susp \RP^{(0)-1}_{-(n+1)} \to \Susp \RP^\infty_{-(n+1)}.\]  Taking the inverse limit gives a map \[\S^0 \to \Susp \RP^\infty_{-\infty},\] and Lin showed this map to be a $2$--adic equivalence~\cite{Lin}.\footnote{More generally, Carlsson proved a generalization of this to all other groups, known as the Segal conjecture.}  From the perspective of blueshift, the qualitative form of this is not entirely unexpected: the sphere has infinite chromatic complexity, and so blueshifting it by one stage yields another spectrum of infinite chromatic complexity.  The precise form, however, is quite surprising: we produced exactly the sphere spectrum again!
 
 This alternative presentation of the sphere spectrum as a Tate spectrum yields a filtration spectral sequence \[\pi_* \S^* \Rightarrow \pi_* (S^{-1})^\wedge_2.\]  In terms of this spectral sequence, any stable stem is represented by a (coset of) element(s) on the $E_1$--page, and this reverse reading of the spectral sequence is known as the \textit{Mahowald root invariant}~\cite{MahowaldShick}.  The root invariant appears to possess deeply interesting redshifting properties---not wholly surprising, since we are reading a blueshifting construction in reverse.  For instance, the root of $p$ lies in the $\alpha$--family, and the root of an $\alpha$--family element lies in the $\beta$--family~\cite{BehrensRootInv}.  The root invariant has many striking connections to other areas of topology~\cite{MahowaldRavenel}.\citeme{EHP sequence, Goodwillie tower, \ldots}
 
-In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Consider the following two perspectives on this construction:
-\begin{itemize}
-    \item (Mahowald:) The calculation $\RP^\infty = T(\mathcal L \downarrow \RP^\infty)$ extends by taking negative multiples of the tautological bundle to give a sequence of spectra \[P^\infty_{-n} = T(-n\mathcal L \downarrow \RP^\infty)\] which extend $\RP^\infty$ into negative dimensions.  The Tate construction can then be defined by \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm P^\infty_{-n}.\]
-    \item (Greenlees--May~\cite{GreenleesMay}:)\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an $E(n)$--local ring spectrum to an $E(n-k)$--local ring spectrum.} There is a general formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of $EG_+ = S(\infty \L)$ and $\widetilde{EG} = S^{\infty \mathcal L}$, which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(P^\infty_{-m}, R).\]
-\end{itemize}
-Something quite spooky has happened: a colimit and a limit were inexplicably interchanged.\todo{Mention also: the Spanier--Whitehead dual of an infinite complex.}  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\footnote{There is a superficially related famous problem known as the Telescope Conjecture.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
+In addition to the chromatic properties waiting to be explored, the Tate construction itself has some truly puzzling features.  Mahowald's original perspective on the Tate construction was through the definition \[R^{tC_2} := \lim_{n \to \infty} \Susp R \sm P^\infty_{-n},\] whereas the general construction of Greenlees--May~\cite{GreenleesMay}\footnote{Stroilova's PhD thesis~\cite{Stroilova} gives a variation of this construction that converts an $E(n)$--local ring spectrum to an $E(n-k)$--local ring spectrum.} uses the formula \[R^{tG} = (F(EG_+, R) \sm \widetilde{EG})^G,\] whose pieces in the case at hand consist of $EG_+ = S(\infty \L)$ and $\widetilde{EG} = S^{\infty \mathcal L}$, which rearranges to give \[R^{tC_2} := \colim_{m \to \infty} F(P^\infty_{-m}, R).\]  Something quite spooky has happened: a colimit and a limit were inexplicably interchanged in the formulas \[\RP^\infty_{-\infty} = \colim_n \lim_m \RP^n_{-m} = \lim_m \colim_n \RP^n_{-m}.\]  Understanding why these extremely different constructions give the same answer will likely yield some very important background theory.\footnote{There is a superficially related famous problem known as the Telescope Conjecture.  Namely, there are various ``finitary'' flavors of chromatic localization, which are typically less categorically robust but more computable.  They assemble into a diagram:
 \[\begin{array}{ccccc}
 E & \to & L_d^{\fin} E & \to & L_d E \\
 \downarrow & & \downarrow & & \downarrow \\
@@ -135,10 +137,7 @@ For a second perspective, using the adjunction \[\CatOf{RingSpectra}(MU, E) \con
 \begin{align*}
 \eta^* DX_+ = E \sm \{F(X_\alpha, \S)\}_\alpha = \{E \sm F(X_\alpha, \S)\}_\alpha = \{F(X_\alpha, E)\}_\alpha.
 \end{align*}
-Applying the functor $\Spf \circ \pi_0$ to this pro-system yields the formal scheme $X_E$ considered in \Cref{FullDefnOfXE}.  One of the overarching themes of this book has been to think of the objects $X$ and $DX_+$ as spectral incarnations of some algebro-geometric recipe, which base-change along $\eta$ to form classical algebro-geometric constructions which have been ``bound'' to $E$.  The situation, as pointed out around \Cref{MUstarVsMUAsModuli}, is somewhat analogous to that of Lubin and Tate's explicit local class field theory, where a certain recipe associates to a local number field a governing formal group in terms of which much of the structure of the number field can be cast.  In the setting of algebraic topology, such a ``recipe'' is embodied by $\CP^\infty$ itself.  Understanding in what sense $\CP^\infty$ is encoding anything (or any of the other spaces discussed in this text) is an important challenge for homotopy theorists in years to come.\footnote{Speaking completely from a place of personal opinion: I have a hard time believing that ``spectral formal groups'', in the sense of derived algebraic geometry, exist in any real generality.  Surely it is not an accident that all the known formal groups arising from homotopy theory tightly derive from the one associated to $\CP^\infty$.  Thinking of $MU$ as some manner of topological enrichment of $\moduli{fg}$, that $MU$--orientations are entirely controlled by a cohomology theory's behavior on $\CP^\infty$ seems to prohibit the existence of any other formal groups associated to a given ring spectrum.}
-
-
-\todo[inline]{Mention Jack's insistence on indexing Morava $K$--theories on local fields, unifying these two perspectives.  Mention also his fascination with that division algebra embedding theorem.}
+Applying the functor $\Spf \circ \pi_0$ to this pro-system yields the formal scheme $X_E$ considered in \Cref{FullDefnOfXE}.  One of the overarching themes of this book has been to think of the objects $X$ and $DX_+$ as spectral incarnations of some algebro-geometric recipe, which base-change along $\eta$ to form classical algebro-geometric constructions which have been ``bound'' to $E$.  The situation, as pointed out around \Cref{MUstarVsMUAsModuli}, is somewhat analogous to that of Lubin and Tate's explicit local class field theory, where a certain recipe associates to a local number field a governing formal group in terms of which much of the structure of the number field can be cast.\footnote{Jack Morava is very insistent on parameterizing his $K$--theories not by a formal group but by a local number field $L$ and its Lubin--Tate $p$--divisible group, a trend not picked up on by most other algebraic topologists.  In connection with the ``topological Langlands program'' hinted at below, he is also highly interested in the Weil--Shafarevich theorem\cite[Appendix III]{Weil}, which shows that all such number fields arise as maximal tori in certain division algebras (dependent on the degree of the extension), and their Galois groups can be understood through this embedding.}  In the setting of algebraic topology, such a ``recipe'' is embodied by $\CP^\infty$ itself.  Understanding in what sense $\CP^\infty$ is encoding anything (or any of the other spaces discussed in this text) is an important challenge for homotopy theorists in years to come.\footnote{Speaking completely from a place of personal opinion: I have a hard time believing that ``spectral formal groups'', in the sense of derived algebraic geometry, exist in any real generality.  Surely it is not an accident that all the known formal groups arising from homotopy theory tightly derive from the one associated to $\CP^\infty$.  Thinking of $MU$ as some manner of topological enrichment of $\moduli{fg}$, that $MU$--orientations are entirely controlled by a cohomology theory's behavior on $\CP^\infty$ seems to prohibit the existence of any other formal groups associated to a given ring spectrum.}
 
 
 
