--- a/unknowns.tex
+++ b/unknowns.tex
@@ -149,20 +149,13 @@ Applying the functor $\Spf \circ \pi_0$ to this pro-system yields the formal sch
 
 \subsection*{Adams filtration asymptotics}
 
-Various large-scale behaviors of the $MU$--Adams spectral sequence are poorly understood and would yield interesting information about stable homotopy theory as a whole.  For instance, the following question is pulled from Mike Hopkins~\cite[Section 10]{HopkinsOnRavenel}: let $g(n)$ denote the largest $MU$--Adams filtration degree of an element of $\pi_n \S$ (i.e., $g$ traces the vanishing curve on the $E_\infty$ page of the $MU$--Adams spectral sequence).  The nilpotence conjectures are all equivalent to the statement \[\lim_{n \to \infty} \frac{g(n)}{n} = 0,\] but little is known about the asymptotics of $g$ beyond this statement.  For instance, one might ask: for what $\eps > 0$ does the asymptotic formula $g(n) = O(n^{\eps})$ hold, and what is the infimum $\eps_{\inf}$ over such values?  Various values of the infimum have various consequences: sufficiently small values entail the Telescope Conjecture (see the footnotes above), and sufficiently large values entail its failure.  Hopkins and Smith claim a plausibility argument that $\eps_{\inf} = 1/2$, which is a Goldilocks value where no consequence for the Telescope Conjecture can be deduced.
+Various large-scale behaviors of the $MU$--Adams spectral sequence are poorly understood and would yield interesting information about stable homotopy theory as a whole.  For instance, the following question is pulled from Mike Hopkins~\cite[Section 10]{HopkinsOnRavenel}: let $g(n)$ denote the largest $MU$--Adams filtration degree of an element of $\pi_n \S$ (i.e., $g$ traces the vanishing curve on the $E_\infty$ page of the $MU$--Adams spectral sequence).  The nilpotence conjectures are all equivalent to the statement \[\lim_{n \to \infty} \frac{g(n)}{n} = 0,\] but little is known about the asymptotics of $g$ beyond this statement.  For instance, one might ask: for what $\eps > 0$ does the asymptotic formula $g(n) = O(n^{\eps})$ hold, and what is the infimum $\eps_{\inf}$ over such values?  Various values of the infimum have various consequences: sufficiently small values entail the Telescope Conjecture (see the footnotes above), and sufficiently large values entail its failure.  Hopkins and Smith claim a plausibility argument that $\eps_{\inf} = 1/2$, which is a Goldilocks value\citeme{Find a cosmological reference for this term} where no consequence for the Telescope Conjecture can be deduced.\footnote{Variations on this question with other homology theories are also interesting.  For instance, a consequence of the Hopkins--Smith periodicity theorems is that a finite complex is type $d$ if and only if $\lim_{n \to \infty} g(n) / n = (2(p^d-1))^{-1}$ holds for $g$ formed from the $H\Z/p$--based Adams spectral seqeunce~\cite[Section 3.5]{HopkinsICMZurich}.}
 
 Another important observation is that $\eta$ is not nilpotent in the $E_2$--term of the $MU$--Adams spectral sequence, and so generally the nilpotence theorems---the most impactful theorems known about the global stable category---do not hold in the algebraic model $\CatOf{QCoh}(\moduli{fg})$.  Rather, the nilpotency of $\eta$ is enforced by a differential further in the spectral sequence.  This differential is actually also algebraic, but of a different nature: it can be deduced from the $C_2$--fixed point spectral sequence for $KU^{hC_2} \simeq KO$.  Understanding what bouquet of extra algebraic techniques account for the general nilpotency of stable homotopy elements would be very interesting.
 
 Yet another interesting observation about this same homotopy fixed point spectral sequence is that it has a horizontal vanishing line on the $E_4$ page.  This phenomenon is quite generic~\cite{MathewMeier}, and in particular it is also true of the descent spectral sequence for $\TMF$.  This is quite intriguing: the moduli stack of elliptic curves is Artinian (as are most ``well-behaved'' moduli stacks considered in arithmetic geometry), meaning that it has finite stabilizer groups.  Such stacks are especially amenable to geometric study.  However, this same finiteness is the source of the infinite cohomological dimension of the moduli of elliptic curves: after all, every nontrivial finite group has infinite group cohomology with coefficients in the trivial integral representation.  In this sense, the \emph{derived} moduli of elliptic curves enjoys both of these benefits: it has finite stabilizer groups, and it simultaneously is, in a certain sense, of \emph{finite} cohomological dimension.  Surely this is useful for something: there must be some facts that arithmetic geometers wish were true, but which are stymied by the infinite cohomological dimension of $\moduli{ell}$.  Finding a use for this may well allow information to flow out of homotopy theory and into arithmetic geometry, itself an exciting prospect.
 
 Finally, a precise understanding of vanishing curves in other Adams spectral sequences---for instance Gonz\'{a}lez's results for the $BP\<1\>$--Adams spectral sequence~\cite{Gonzalez}---also give rise to sparsity results in the $MU$--Adams spectral sequence, and hence control of the overall behavior.
-
-
-
-
-
-
-\todo[inline]{\cite[Section 3.5]{HopkinsICMZurich}. Hopkins also notes that the $H\Z/p$--based version of $g(n)$ of a type k complex has a vanishing line of slope $1/2(p^k-1)$.}
 
 
 
