cite the stabilizer algebras paper

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -189,7 +189,7 @@ As announced by Morava~\cite[Remark 2.2.5]{MoravaCobordismComodules}, methods fr
 
 In any event, this only addresses the ``easiest'' part of the conjecture, and the other parts take considerable effort even to parse properly.  The last part is the most interesting: it is a statement about $L_{d-1} \widehat L_d \S$, and hence about the interplay between two different chromatic heights.  Torii has spent much of his career analyzing algebraic models of this phenomenon---in particular, the action of $\S_{d-1}$ on the ``punctured Lubin--Tate ring'' $\F_{p^d}(\!(u_d)\!)[u^\pm]$~\cite{Torii1,Torii2,Torii4,Torii3,Torii5}.  Recent activity on this front indicates that there is much to mine from this vein, and that Torii's program deserves more attention than it has so far garnered.
 
-A related point of interest is the action of $\S_d$ on $\F_{p^d}\ps{u_d}[u^\pm]$.  The action of $\S_d$ on the special fiber of the Lubin--Tate ring is somewhat well-understood\citeme{Ravenel}; for instance, in the case $d = 2$ we have a calculation \[H^*(\S_2; \F_{p^2}) \cong \left.(\F_{p^2}[\zeta][u^{\pm(p^2-1)}])\{1, h_0, h_1, g_0, g_1, t\}\middle/\left(\begin{array}{c} h_0 g_1 = t, \\ h_1 g_0 = t \end{array}\right)\right. ,\] with all unlabeled products of the Roman elements equal to zero.  This forms the input to a Bockstein spectral sequence \[H^*(\S_2; \m^j / \m^{j+1}) \Rightarrow H^*(\S_2; \F_{p^2}\ps{u_1}[u^\pm]),\] where $\m = (u_1)$ is the maximal ideal in this local graded ring, and hence the representation $\m^j / \m^{j+1}$ is (a twist of) the representation $\F_{p^2}$.  This Bockstein spectral sequence displays a number of intriguing phenomena\footnote{For $d > 2$ there are a succession of similar Bockstein spectral sequences, where the Lubin--Tate generators are reintroduced to the Lubin--Tate ring one at a time.  The first of these spectral sequences always displays these same intriguing phenomena, but the later ones are much more poorly understood.}---for instance, it has ``periodic'' differentials\citeme{paper with Hopkins and Sadofsky}.  One such periodic family is specified by
+A related point of interest is the action of $\S_d$ on $\F_{p^d}\ps{u_d}[u^\pm]$.  The action of $\S_d$ on the special fiber of the Lubin--Tate ring is somewhat well-understood~\cite{RavenelCohomologyStabAlgs}; for instance, in the case $d = 2$ we have a calculation \[H^*(\S_2; \F_{p^2}) \cong \left.(\F_{p^2}[\zeta][u^{\pm(p^2-1)}])\{1, h_0, h_1, g_0, g_1, t\}\middle/\left(\begin{array}{c} h_0 g_1 = t, \\ h_1 g_0 = t \end{array}\right)\right. ,\] with all unlabeled products of the Roman elements equal to zero.  This forms the input to a Bockstein spectral sequence \[H^*(\S_2; \m^j / \m^{j+1}) \Rightarrow H^*(\S_2; \F_{p^2}\ps{u_1}[u^\pm]),\] where $\m = (u_1)$ is the maximal ideal in this local graded ring, and hence the representation $\m^j / \m^{j+1}$ is (a twist of) the representation $\F_{p^2}$.  This Bockstein spectral sequence displays a number of intriguing phenomena\footnote{For $d > 2$ there are a succession of similar Bockstein spectral sequences, where the Lubin--Tate generators are reintroduced to the Lubin--Tate ring one at a time.  The first of these spectral sequences always displays these same intriguing phenomena, but the later ones are much more poorly understood.}---for instance, it has ``periodic'' differentials\citeme{paper with Hopkins and Sadofsky}.  One such periodic family is specified by
 \begin{align*}
 d_1 u^{1-p^2} & = (u_1 u^{1-p}) \cdot h_1, \\
 d_p u^{p(1-p^2)} & = (u_1 u^{(1-p)})^p \cdot u^{(p-1)(1-p^2)} \cdot h_0, \\
