--- a/main.bib
+++ b/main.bib
@@ -2706,6 +2706,23 @@ MRREVIEWER = {R. E. Stong},
        URL = {http://dx.doi.org/10.1090/S0002-9904-1969-12401-8},
 }
 
+@article {RavenelCohomologyStabAlgs,
+    AUTHOR = {Ravenel, Douglas C.},
+     TITLE = {The cohomology of the {M}orava stabilizer algebras},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {152},
+      YEAR = {1977},
+    NUMBER = {3},
+     PAGES = {287--297},
+      ISSN = {0025-5874},
+   MRCLASS = {55G25},
+  MRNUMBER = {0431168},
+MRREVIEWER = {A. Liulevicius},
+       DOI = {10.1007/BF01488970},
+       URL = {http://dx.doi.org/10.1007/BF01488970},
+}
+
 @book {RavenelGreenBook,
     AUTHOR = {Ravenel, Douglas C.},
      TITLE = {Complex cobordism and stable homotopy groups of spheres},
