more todo cleanup in Appendix B

--- a/main.bib
+++ b/main.bib
@@ -2903,6 +2903,23 @@ MRREVIEWER = {Keith Peter Johnson},
 MRREVIEWER = {Donald M. Davis},
 }
 
+@incollection {Sadofsky,
+    AUTHOR = {Sadofsky, Hal},
+     TITLE = {Hopkins' and {M}ahowald's picture of {S}himomura's
+              {$v_1$}-{B}ockstein spectral sequence calculation},
+ BOOKTITLE = {Algebraic topology ({O}axtepec, 1991)},
+    SERIES = {Contemp. Math.},
+    VOLUME = {146},
+     PAGES = {407--418},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {1993},
+   MRCLASS = {55T15 (55P42 55Q10)},
+  MRNUMBER = {1224928},
+MRREVIEWER = {Andrew J. Baker},
+       DOI = {10.1090/conm/146/01236},
+       URL = {http://dx.doi.org/10.1090/conm/146/01236},
+}
+
 @article{Salch,
   title={The cohomology of the height four Morava stabilizer group at large primes},
   author={Salch, Andrew},
