make the torus in Figure 5.1 more lifelike

--- a/sigma.tex
+++ b/sigma.tex
@@ -981,9 +981,22 @@ There is a second standard embedding of a complex elliptic curve into projective
     % End of foreach statement
     }
     \pgfmathsetmacro\elrad{20*max(cos(45),.1)}
+    \begin{scope}
+    \clip[overlay]
+    % \clip[overlay]
+        (-1.67,-2) -- (-0.85, 0.2) -- (-1.67, 0.2) -- cycle;
     \draw[very thick, color=red]
         (xyz polar cs:angle=225,radius=.75,x radius=1.5)
         ellipse (\elrad pt and 20pt);
+    \end{scope}
+    \begin{scope}
+    \clip[overlay]
+    % \clip[overlay]
+        (-1.67,-2) -- (-0.85, 0.2) -- (0, 0.2) -- (-0.85, -2) -- cycle;
+    \draw[very thick, color=red, densely dotted]
+        (xyz polar cs:angle=225,radius=.75,x radius=1.5)
+        ellipse (\elrad pt and 20pt);
+    \end{scope}
 \end{tikzpicture}
 \end{center}
 \caption{Presentation of an elliptic curve as the quotient of nested annuli.}\label{AnnulusPicture}
