katz-mazur reference

--- a/main.bib
+++ b/main.bib
@@ -1677,6 +1677,22 @@ MRREVIEWER = {Thomas Zink},
 MRREVIEWER = {William E. Lang},
 }
 
+@book {KatzMazur,
+    AUTHOR = {Katz, Nicholas M. and Mazur, Barry},
+     TITLE = {Arithmetic moduli of elliptic curves},
+    SERIES = {Annals of Mathematics Studies},
+    VOLUME = {108},
+ PUBLISHER = {Princeton University Press, Princeton, NJ},
+      YEAR = {1985},
+     PAGES = {xiv+514},
+      ISBN = {0-691-08349-5; 0-691-08352-5},
+   MRCLASS = {11G05 (11F11 14G25 14K15)},
+  MRNUMBER = {772569},
+MRREVIEWER = {Kenneth A. Ribet},
+       DOI = {10.1515/9781400881710},
+       URL = {http://dx.doi.org/10.1515/9781400881710},
+}
+
 @article {KitchlooLaures,
     AUTHOR = {Kitchloo, Nitu and Laures, Gerd},
      TITLE = {Real structures and {M}orava {$K$}-theories},
